testing new gitignore with freesurfer folder files

--- a/ALFF_IDEMO_ISLA/R/IMCo_ALFF_IDEMO_ISLA.Rmd
+++ b/ALFF_IDEMO_ISLA/R/IMCo_ALFF_IDEMO_ISLA.Rmd
@@ -642,11 +642,8 @@ preprocess_for_spin_test(file_paths = list.files(file.path(settings$output_dir, 
 ```
 
 # Visualize surface plots
-```{python}
-import os
-from surfer import Brain, project_volume_data
-from mayavi import mlab
-
-mlab.init_notebook(backend='png')
+```{}
+#RUNOTHER
+surfplot.ipynb from local. Must download freesurfer_images directory to run.
 ```
 
