pushing pngs of modality pvals

--- a/ALFF_IDEMO_ISLA/R/surfplot.ipynb
+++ b/ALFF_IDEMO_ISLA/R/surfplot.ipynb
@@ -9,10 +9,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "objc[59057]: Class QMacAutoReleasePoolTracker is implemented in both /Users/hufengling/mambaforge/lib/python3.9/site-packages/PyQt5/Qt5/lib/QtCore.framework/Versions/5/QtCore (0x114ac5198) and /Users/hufengling/mambaforge/lib/libQt5Core.5.12.9.dylib (0x16b5ee528). One of the two will be used. Which one is undefined.\n",
-      "objc[59057]: Class QT_ROOT_LEVEL_POOL__THESE_OBJECTS_WILL_BE_RELEASED_WHEN_QAPP_GOES_OUT_OF_SCOPE is implemented in both /Users/hufengling/mambaforge/lib/python3.9/site-packages/PyQt5/Qt5/lib/QtCore.framework/Versions/5/QtCore (0x114ac5210) and /Users/hufengling/mambaforge/lib/libQt5Core.5.12.9.dylib (0x16b5ee5a0). One of the two will be used. Which one is undefined.\n",
-      "objc[59057]: Class KeyValueObserver is implemented in both /Users/hufengling/mambaforge/lib/python3.9/site-packages/PyQt5/Qt5/lib/QtCore.framework/Versions/5/QtCore (0x114ac5238) and /Users/hufengling/mambaforge/lib/libQt5Core.5.12.9.dylib (0x16b5ee5c8). One of the two will be used. Which one is undefined.\n",
-      "objc[59057]: Class RunLoopModeTracker is implemented in both /Users/hufengling/mambaforge/lib/python3.9/site-packages/PyQt5/Qt5/lib/QtCore.framework/Versions/5/QtCore (0x114ac5288) and /Users/hufengling/mambaforge/lib/libQt5Core.5.12.9.dylib (0x16b5ee618). One of the two will be used. Which one is undefined.\n"
+      "objc[27380]: Class QMacAutoReleasePoolTracker is implemented in both /Users/hufengling/mambaforge/lib/python3.9/site-packages/PyQt5/Qt5/lib/QtCore.framework/Versions/5/QtCore (0x106b37198) and /Users/hufengling/mambaforge/lib/libQt5Core.5.12.9.dylib (0x165461528). One of the two will be used. Which one is undefined.\n",
+      "objc[27380]: Class QT_ROOT_LEVEL_POOL__THESE_OBJECTS_WILL_BE_RELEASED_WHEN_QAPP_GOES_OUT_OF_SCOPE is implemented in both /Users/hufengling/mambaforge/lib/python3.9/site-packages/PyQt5/Qt5/lib/QtCore.framework/Versions/5/QtCore (0x106b37210) and /Users/hufengling/mambaforge/lib/libQt5Core.5.12.9.dylib (0x1654615a0). One of the two will be used. Which one is undefined.\n",
+      "objc[27380]: Class KeyValueObserver is implemented in both /Users/hufengling/mambaforge/lib/python3.9/site-packages/PyQt5/Qt5/lib/QtCore.framework/Versions/5/QtCore (0x106b37238) and /Users/hufengling/mambaforge/lib/libQt5Core.5.12.9.dylib (0x1654615c8). One of the two will be used. Which one is undefined.\n",
+      "objc[27380]: Class RunLoopModeTracker is implemented in both /Users/hufengling/mambaforge/lib/python3.9/site-packages/PyQt5/Qt5/lib/QtCore.framework/Versions/5/QtCore (0x106b37288) and /Users/hufengling/mambaforge/lib/libQt5Core.5.12.9.dylib (0x165461618). One of the two will be used. Which one is undefined.\n"
      ]
     },
     {
@@ -36,13 +36,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/modality/alff_age_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/modality/cbf-isla_sex-age_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/modality/idemo_age_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/modality/cbf-isla_sex_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/modality/cbf-isla_age_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/modality/idemo_sex-age_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/modality/idemo_sex_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/modality/alff_sex-age_fdr05.nii.gz\n",
+      "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/modality/alff_sex_fdr05.nii.gz\n",
       "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/adjusted/global_wcov_sex_fdr05.nii.gz\n",
       "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/adjusted/unscaled_wcor_sex-age_fdr05.nii.gz\n",
       "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/adjusted/global_wcov_sex-age_fdr05.nii.gz\n",
@@ -75,16 +84,6 @@
       "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/descriptive/cbf-isla_variance.nii.gz\n",
       "/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/descriptive/global_wcov_mean.nii.gz\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/hufengling/Documents/Penn/Shinohara/IMCo_analyses/ALFF_IDEMO_ISLA/output/freesurfer_images/MNI_space/pvals/adjusted/global_wcov_sex_fdr05.nii.gz'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -95,26 +94,42 @@
     "nifti_list = []\n",
     "\n",
     "for root, dirs, files in os.walk(freeMNI_dir): #list of files registered to MNI space\n",
-    "\tfor file in files:\n",
+    "    for file in files:\n",
     "        #append the file name to the list\n",
-    "\t\tnifti_list.append(os.path.join(root,file))\n",
+    "        if file != \".DS_Store\":\n",
+    "            nifti_list.append(os.path.join(root,file))\n",
     "\n",
     "for i in nifti_list:\n",
-    "    print(i)\n",
-    "\n",
-    "nifti_path = nifti_list[0]\n",
-    "nifti_path"
+    "    print(i)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "0.0 1.0\n",
+      "done: alff_age_fdr05\n",
+      "0.0 1\n",
+      "done: cbf-isla_sex-age_fdr05\n",
+      "0.0 1.0\n",
+      "done: idemo_age_fdr05\n",
+      "0.0 1.0\n",
+      "done: cbf-isla_sex_fdr05\n",
+      "0.0 1.0\n",
+      "done: cbf-isla_age_fdr05\n",
+      "0.0 1.0\n",
+      "done: idemo_sex-age_fdr05\n",
+      "0.0 1.0\n",
+      "done: idemo_sex_fdr05\n",
+      "0.0 1\n",
+      "done: alff_sex-age_fdr05\n",
+      "0.0 1.0\n",
+      "done: alff_sex_fdr05\n",
       "0.0 0.9597467\n",
       "done: global_wcov_sex_fdr05\n",
       "0.0 1\n",
