--- a/ALFF_IDEMO_ISLA/R/surfplot.ipynb
+++ b/ALFF_IDEMO_ISLA/R/surfplot.ipynb
@@ -197,8 +197,9 @@
     }
    ],
    "source": [
-    "reg_file = os.path.join(os.environ[\"FREESURFER_HOME\"], \"average/mni152.register.dat\")\n",
+    "figures_dir = os.path.join(output_dir, \"figures/surfaces\")\n",
     "\n",
+    "reg_file = os.path.join(os.environ[\"FREESURFER_HOME\"], \"average/mni152.register.dat\")\n",
     "for nifti_path in nifti_list:\n",
     "    nifti_name = nifti_path.split(\"/\")[-1].split(\".\")[0]\n",
     "    brain = Brain(subject_id = \"fsaverage\", \n",
@@ -210,6 +211,193 @@
     "    \n",
     "    surf_data_lh = project_volume_data(nifti_path, \"lh\", reg_file, smooth_fwhm = 3)\n",
     "    surf_data_rh = project_volume_data(nifti_path, \"rh\", reg_file, smooth_fwhm = 3)\n",
+    "    \n",
+    "    min_whole = min(min(surf_data_lh), min(surf_data_rh))\n",
+    "    max_whole = max(max(surf_data_lh), max(surf_data_rh))\n",
+    "    \n",
+    "    if(min_whole == max_whole):\n",
+    "        max_whole = 1\n",
+    "    \n",
+    "    print(min_whole, max_whole)\n",
+    "\n",
+    "    brain.add_data(surf_data_lh, min = min_whole, max = max_whole, hemi = 'lh')\n",
+    "    brain.add_data(surf_data_rh, min = min_whole, max = max_whole, hemi = 'rh')\n",
+    "    \n",
+    "    brain.save_image(os.path.join(figures_dir, nifti_name + \".png\"))\n",
+    "    print(\"done: \" + nifti_name)\n",
+    "    \n",
+    "print(\"all done!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0 1.0\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "add_text() missing 1 required positional argument: 'name'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m/var/folders/sj/bkymnjm96gx1t66x9hbv50mc0000gn/T/ipykernel_27380/1559725333.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     26\u001b[0m     \u001b[0mbrain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msurf_data_rh\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmin\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmin_whole\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmax\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmax_whole\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mhemi\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'rh'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m     \u001b[0mbrain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_text\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m20\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m30\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtext\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnifti_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m     \u001b[0mbrain\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msave_image\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjoin\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfigures_dir\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnifti_name\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m\".png\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: add_text() missing 1 required positional argument: 'name'"
+     ]
+    }
+   ],
+   "source": [
+    "figures_dir = os.path.join(output_dir, \"figures/surfaces_fwhm1\")\n",
+    "\n",
+    "reg_file = os.path.join(os.environ[\"FREESURFER_HOME\"], \"average/mni152.register.dat\")\n",
+    "\n",
+    "for nifti_path in nifti_list[:3]:\n",
+    "    nifti_name = nifti_path.split(\"/\")[-1].split(\".\")[0]\n",
+    "    brain = Brain(subject_id = \"fsaverage\", \n",
+    "                  hemi = \"split\", \n",
+    "                  surf = \"inflated\", \n",
+    "                  title = nifti_name,\n",
+    "                  views=['med', 'lat'], \n",
+    "                  background=\"white\")\n",
+    "    \n",
+    "    surf_data_lh = project_volume_data(nifti_path, \"lh\", reg_file, smooth_fwhm = 1)\n",
+    "    surf_data_rh = project_volume_data(nifti_path, \"rh\", reg_file, smooth_fwhm = 1)\n",
+    "    \n",
+    "    min_whole = min(min(surf_data_lh), min(surf_data_rh))\n",
+    "    max_whole = max(max(surf_data_lh), max(surf_data_rh))\n",
+    "    \n",
+    "    if(min_whole == max_whole):\n",
+    "        max_whole = 1\n",
+    "    \n",
+    "    print(min_whole, max_whole)\n",
+    "\n",
+    "    brain.add_data(surf_data_lh, min = min_whole, max = max_whole, hemi = 'lh')\n",
+    "    brain.add_data(surf_data_rh, min = min_whole, max = max_whole, hemi = 'rh')\n",
+    "    \n",
+    "    brain.add_text(x = 20, y = 30, text = nifti_name)\n",
+    "    \n",
+    "    brain.save_image(os.path.join(figures_dir, nifti_name + \".png\"))\n",
+    "    print(\"done: \" + nifti_name)\n",
+    "    \n",
+    "print(\"all done!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.0 1.0\n",
+      "done: alff_age_fdr05\n",
+      "0.0 1\n",
+      "done: cbf-isla_sex-age_fdr05\n",
+      "0.0 1.0\n",
+      "done: idemo_age_fdr05\n",
+      "0.0 1.0\n",
+      "done: cbf-isla_sex_fdr05\n",
+      "0.0 1.0\n",
+      "done: cbf-isla_age_fdr05\n",
+      "0.0 1.0\n",
+      "done: idemo_sex-age_fdr05\n",
+      "0.0 1.0\n",
+      "done: idemo_sex_fdr05\n",
+      "0.0 1\n",
+      "done: alff_sex-age_fdr05\n",
+      "0.0 1.0\n",
+      "done: alff_sex_fdr05\n",
+      "0.0 1.0\n",
+      "done: global_wcov_sex_fdr05\n",
+      "0.0 1\n",
+      "done: unscaled_wcor_sex-age_fdr05\n",
+      "0.0 1\n",
+      "done: global_wcov_sex-age_fdr05\n",
+      "0.0 1\n",
+      "done: unscaled_wcor_sex_fdr05\n",
+      "0.0 1.0\n",
+      "done: unscaled_wcor_age_fdr05\n",
+      "0.0 1.0\n",
+      "done: global_wcov_age_fdr05\n",
+      "0.0 1.0\n",
+      "done: yeo7_7\n",
+      "0.0 1.0\n",
+      "done: yeo7_5\n",
+      "0.0 1.0\n",
+      "done: yeo7_1\n",
+      "0.0 1.0\n",
+      "done: yeo7_3\n",
+      "0.0 1.0\n",
+      "done: yeo7_6\n",
+      "0.0 1.0\n",
+      "done: yeo7_4\n",
+      "0.0 1.0\n",
+      "done: yeo7_2\n",
+      "0.0 1.0\n",
+      "done: aal_5000\n",
+      "0.0 1.0\n",
+      "done: aal_8000\n",
+      "0.0 1.0\n",
+      "done: aal_3000\n",
+      "0.0 1.0\n",
+      "done: aal_4000\n",
+      "0.0 0.7\n",
+      "done: aal_9000\n",
+      "0.0 1.0\n",
+      "done: aal_2000\n",
+      "0.0 1.0\n",
+      "done: aal_7000\n",
+      "0.0 1.0\n",
+      "done: aal_6000\n",
+      "0.0 0.8214756\n",
+      "done: unscaled_wcor_mean\n",
+      "0.0 0.020856692\n",
+      "done: global_wcov_variance\n",
+      "0.0 137.66359\n",
+      "done: idemo_mean\n",
+      "0.0 5719.2695\n",
+      "done: idemo_variance\n",
+      "0.0 0.019858787\n",
+      "done: unscaled_wcor_variance\n",
+      "0.0 1145.9235\n",
+      "done: alff_mean\n",
+      "-0.46682844 1.6765816\n",
+      "done: cbf-isla_mean\n",
+      "0.0 437991.2\n",
+      "done: alff_variance\n",
+      "0.0 1.8065449\n",
+      "done: cbf-isla_variance\n",
+      "0.0 0.92739886\n",
+      "done: global_wcov_mean\n",
+      "all done!\n"
+     ]
+    }
+   ],
+   "source": [
+    "figures_dir = os.path.join(output_dir, \"figures/surfaces_fwhm0\")\n",
+    "\n",
+    "reg_file = os.path.join(os.environ[\"FREESURFER_HOME\"], \"average/mni152.register.dat\")\n",
+    "\n",
+    "for nifti_path in nifti_list:\n",
+    "    nifti_name = nifti_path.split(\"/\")[-1].split(\".\")[0]\n",
+    "    brain = Brain(subject_id = \"fsaverage\", \n",
+    "                  hemi = \"split\", \n",
+    "                  surf = \"inflated\", \n",
+    "                  title = nifti_name,\n",
+    "                  views=['med', 'lat'], \n",
+    "                  background=\"white\")\n",
+    "    \n",
+    "    surf_data_lh = project_volume_data(nifti_path, \"lh\", reg_file, smooth_fwhm = 0)\n",
+    "    surf_data_rh = project_volume_data(nifti_path, \"rh\", reg_file, smooth_fwhm = 0)\n",
     "    \n",
     "    min_whole = min(min(surf_data_lh), min(surf_data_rh))\n",
     "    max_whole = max(max(surf_data_lh), max(surf_data_rh))\n",
