--- a/ALFF_IDEMO_ISLA/R/IMCo_ALFF_IDEMO_ISLA.Rmd
+++ b/ALFF_IDEMO_ISLA/R/IMCo_ALFF_IDEMO_ISLA.Rmd
@@ -463,7 +463,7 @@ modality_yeo7_barplot <- ggplot(modality_yeo7, aes(network_ids, proportion)) +
   geom_errorbar(aes(ymin = proportion - se, ymax = proportion + se), width = .2,
                 position = position_dodge(.9)) +
   facet_wrap(~ map_name) +
-  labs(title = "modality on Yeo7") +
+  labs(title = "Modality on Yeo7") +
   scale_x_discrete(labels = c("Visual", "Somatomotor", "Dorsal Attention", "Ventral Attention", "Limbic", "Frontoparietal", "Default")) +
   theme_classic() +
   theme(axis.text.x = element_text(angle = 90)); modality_yeo7_barplot
@@ -478,7 +478,7 @@ modality_aal_barplot <- ggplot(modality_aal, aes(network_ids, proportion)) +
   geom_errorbar(aes(ymin = proportion - se, ymax = proportion + se), width = .2,
                 position = position_dodge(.9)) +
   facet_wrap(~ map_name) +
-  labs(title = "modality on AAL") +
+  labs(title = "Modality on AAL") +
   scale_x_discrete(labels = c("Hippocampus", "Amygdala", "Caudate", "Putamen", "Pallidum", "Thalamus")) +
   theme_classic() +
   theme(axis.text.x = element_text(angle = 90)); modality_aal_barplot
@@ -621,19 +621,36 @@ preprocess_for_spin_test <- function(file_paths = NULL, atlas_name = c("", "yeo7
 ## Run
 ```{r}
 Sys.setenv(FS_LICENSE="/home/fengling/software/freesurfer/license.txt")
-pval_paths <- read_csv(file.path(settings$output_dir, "csvs/pval_descriptive_stats.csv")) %>% 
-  filter(mc_correction == "fdr05") %>%
+pval_descriptive <- read_csv(file.path(settings$output_dir, "csvs/pval_descriptive_stats.csv"))
+
+pval_coupling_paths <- pval_descriptive %>% 
+  filter(mc_correction == "fdr05",
+         matrix_type != "modality") %>%
   pull(file_paths) %>% 
   as.list()
+pval_modality_paths <- pval_descriptive %>% 
+  filter(mc_correction == "fdr05",
+         matrix_type == "modality") %>%
+  pull(file_paths) %>% 
+  as.list()
+
 fs_images_dir <- file.path(settings$output_dir, "freesurfer_images")
 
+#atlas
 preprocess_for_spin_test(atlas_name = "yeo7", #TODO should I apply grey matter mask?
                          fs_images_dir = fs_images_dir)
 preprocess_for_spin_test(atlas_name = "aal",
                          fs_images_dir = fs_images_dir)
-preprocess_for_spin_test(file_paths = pval_paths,
+
+#pvals
+preprocess_for_spin_test(file_paths = pval_coupling_paths,
                          fs_images_dir = fs_images_dir,
                          file_path_output_dir = "pvals/adjusted")
+preprocess_for_spin_test(file_paths = pval_modality_paths,
+                         fs_images_dir = fs_images_dir,
+                         file_path_output_dir = "pvals/modality")
+
+#descriptive
 preprocess_for_spin_test(file_paths = list.files(file.path(settings$output_dir, "niftis/descriptive"),
                                                  full.names = TRUE) %>% as.list(),
                          fs_images_dir = fs_images_dir,
@@ -642,8 +659,8 @@ preprocess_for_spin_test(file_paths = list.files(file.path(settings$output_dir, 
 ```
 
 # Visualize surface plots
-```{}
+```{r}
 #RUNOTHER
-surfplot.ipynb from local. Must download freesurfer_images directory to run.
+#surfplot.ipynb from local. Must download freesurfer_images directory to run.
 ```
 
